[package]
name = "dougu"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Dougu (道具) — utility toolkit for Neovim: dashboard, terminal, zen mode, scroll animations"
homepage = "https://github.com/pleme-io/dougu"
repository = "https://github.com/pleme-io/dougu"
readme = "README.md"
license = "MIT"
categories = ["text-editors"]
keywords = ["neovim", "dashboard", "terminal", "zen"]

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11"] }
tane = { path = "../tane", version = "0.1.0" }
waku = { path = "../waku", version = "0.1.0" }

[dev-dependencies]
tempfile = "3"
